# sunlogi_bot

./: Cargo.toml  Dockerfile  README.md  depots.json  docker-compose.yml  item_list.json  items.json  pyproject.toml  testing.env
migrations/2023-02-01-230702_create_stockpiles/: down.sql  up.sql
src/: main.rs  models.rs  schema.rs
sunbot/: database.py  delivery.py  item_parse.py  models.py  stockpiles.py  sunbot.py  war_api.py
sunbot-chart/: Chart.yaml  values.yaml
sunbot-chart/templates/: NOTES.txt  _helpers.tpl  deployment.yaml  hpa.yaml  ingress.yaml  service.yaml  serviceaccount.yaml
sunbot-chart/templates/tests/: test-connection.yaml
