[tool.poetry]
name = "sunbot"
version = "0.2.2"
description = ""
authors = ["Blake Hildebrand"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
discord-py = "^2.1.0"
requests = "^2.28.2"
psycopg2 = "^2.9.5"
pyyaml = "^6.0"
sqlalchemy = "^2.0.3"
asyncpg = "^0.27.0"

[tool.poetry.scripts]
sunbot = "sunbot.sunbot:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
